Refactor: Centralize constants and restructure config files